modified:   index.html

--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
         จัดทำโดย <a href="https://twitter.com/ThePeopleSpaces">คณะราษเปซ</a>
         &amp;
         <a href="https://twitter.com/ResolutionCons">Re-solution ถึงเวลารัฐธรรมนูญใหม่</a>
+        <br>
+        <i class="bi-github"></i>
+        <a href="https://github.com/webdevxp/resolutionconformgen">Github</a>
       </section>
     </main>
 
